# ask-gita

./: README.md
backend/: built_index.py  main.py  pyproject.toml  query_gita.py  requirements.txt
backend/data/chroma_index/baaf443c-8919-43f4-903e-c77cee8d04b6/: index_metadata.pickle
