[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.2.1",
    "langchain>=1.0.2",
    "langchain-community>=0.4",
    "langchain-core>=1.0.0",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.1",
    "llama-index",
    "pymupdf>=1.26.5",
    "pypdf>=6.1.2",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.1.1",
]
